HTTPS Implementation (port changed)
Implementado el uso de https
acceder a la página ahora requiere el uso de https y se cambió el puerto a 4001

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "adriancela",
-    "database": "exgen_station",
+    "password": "contraseña",
+    "database": "conceptoDB",
     "host": "localhost",
     "dialect": "mysql"
   },
