--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 SoftwareCertificates/
 config/config.json
+config/config
 .env
+seeders/20240316215254-demo-users
+seeders/20240316215254-demo-users.js
